# testomat_tests

./: .gitignore  README.md  api-1.yaml  index.html  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: tests.yml
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 5b6ee198d819e483.txt  625d473e4edc3e8f.txt  695da2155a837f.txt  83278cc4e250e0b1.txt
data/test-cases/: 132590cdfff4ca8f.json  411ff76f77831a88.json  4e6ed6ab45771e88.json  66961ca21f23212e.json  72fa6010aa681d3b.json  c68016a3c82c8f2d.json  e534bc876d9d4ad7.json  e6433af06a644927.json  e6905fd4ee0fed74.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
src/api/: client.py
src/api/controllers/: __init__.py  base_controller.py  project_controller.py  suite_controller.py  test_controller.py
src/api/models/: __init__.py  project.py  suite.py  test.py
src/web/: application.py
src/web/components/: ProjectCard.py  ProjectPageHeader.py  SideBar.py  project_card.py  project_page_header.py  side_bar.py  test_for_suite_popup.py  test_modal.py
src/web/pages/: LoginPage.py  NewProjectsPage.py  ProjectPage.py  ProjectsPage.py  home_page.py  login_page.py  new_projects_page.py  project_page.py  projects_page.py
tests/: conftest.py  first_test.py
tests/api/: projects_controller_test.py  projects_test.py  suites_test.py  tests_test.py
tests/fixtures/: api.py  app.py  cookie_helper.py  playwright.py  selenium.py
tests/web/: cookies_test.py  login_page_test.py  project_creation_test.py  project_page_test.py
tests/web/enterprise_plan_tests/: project_creation_test.py  project_page_test.py  switch_company_test.py
tests/web/free_plan_tests/: free_proj_test.py
tests/web/selenium/: simple_via_selenium_test.py
widgets/: severity.json  status-chart.json  suites.json  summary.json
(+4 files in other folders)
