[project]
name = "testomat-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest==9.0.2",
    "playwright==1.58.0",
    "pytest-playwright==0.7.2",
    "python-dotenv==1.2.2",
    "faker==40.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.pytest.ini_options]
addopts = "--headed"
base_url = "https://app.testomat.io"

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [
    ".venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "N"]