[project]
name = "testomat-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker==40.11.0",
    "playwright==1.58.0",
    "pytest==8.4.1",
    "pytest-html==4.2.0",
    "pytest-playwright==0.7.2",
    "python-dotenv==1.2.2",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["tests_*.py", "*_test.py", "*_tests.py"]
python_functions = ["test_*"]
norecursedirs = [".git", ".venv", ".claude", "__pycache__", "build", "dist", "*.egg-info"]
base_url = "https://app.testomat.io"
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--self-contained-html",
]
markers = [
    "smoke: Quick smoke test for basic functionality",
    "regression: Full regression test suite",
    "web: Web UI tests using Playwright",
    "slow: Tests that take longer to execute",
]
console_output_style = "progress"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
xfail_strict = true

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "N"]